--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,4 @@ include README.rst
 include tox.ini
 include setup.py
 
-include exec_wrappers/templates/*
+recursive-include exec_wrappers/templates *
