--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
   - "$HOME/.cache/pip"
 deploy:
   provider: pypi
+  distributions: "sdist bdist_wheel"
   server: https://testpypi.python.org/pypi
   user: gqmelo
   password:
@@ -25,6 +26,5 @@ deploy:
   on:
     branch: master
     tags: false
-    distributions: sdist bdist_wheel
     repo: gqmelo/exec-wrappers
     condition: $TRAVIS_PYTHON_VERSION = "2.7"
