--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+os: linux
 language: python
 python:
   - "2.7"
@@ -7,9 +8,29 @@ python:
   - "3.5"
   - "pypy"
   - "nightly"
+matrix:
+    include:
+        - os: osx
+          language: generic
+          env:
+            - TRAVIS_PYTHON_VERSION=3.5
+            - PYTHON=3.5.2
 
 allow_failures:
   - python: "nightly"
+
+# Based on https://pythonhosted.org/CodeChat/.travis.yml.html
+before_install: |
+  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update
+    brew install openssl readline
+    brew outdated pyenv || brew upgrade pyenv
+    brew install pyenv-virtualenv
+    pyenv install $PYTHON
+    export PYENV_VERSION=$PYTHON
+    export PATH="/Users/travis/.pyenv/shims:${PATH}"
+    python --version
+  fi
 
 install:
   - pip install tox
