--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,5 @@
 envlist = py27,py33,py34,py35,nightly,pypy
 
 [testenv]
-deps = pytest
+deps = -r{toxinidir}/requirements.txt
 commands = py.test {posargs:tests}
