Pass -vvv to pytest

--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ envlist = py27,py33,py34,py35,nightly,pypy
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
-commands = py.test {posargs:tests}
+commands = py.test -vvv {posargs:tests}
