--- a/tox.ini
+++ b/tox.ini
@@ -5,3 +5,22 @@ envlist = py27,py33,py34,py35,py36,nightly,pypy
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 commands = py.test -vvv {posargs:tests}
+
+[testenv:linting]
+deps =
+    flake8
+    # pygments required by rst-lint
+    pygments
+    restructuredtext_lint
+commands =
+    flake8 exec_wrappers tests
+    rst-lint CONTRIBUTING.rst CHANGELOG.rst README.rst
+
+# Run on a separate env and job so we can run the tests in develop mode, which
+# makes it easier to run coverage and specify the sources.
+[testenv:coverage]
+usedevelop=True
+deps =
+    -r{toxinidir}/requirements.txt
+commands =
+    py.test -vvv --cov exec_wrappers --cov-config .coveragerc --cov-report xml {posargs:tests}
