--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,8 @@ environment:
     - PYTHON: "C:\\Python36"
       TOX_ENV: "py36"
 
+    - PYTHON: "C:\\Python36"
+      TOX_ENV: "coverage"
 
 init:
   - "%PYTHON%/python -V"
@@ -34,10 +36,11 @@ test_script:
 
 after_test:
   - "%PYTHON%/python setup.py bdist_wheel"
-  - ps: "ls dist"
+  - ps: |
+      ls dist
+      $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
+      Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
+      bash codecov.sh
 
 artifacts:
   - path: dist\*
-
-#on_success:
-#  - TODO: upload the content of dist/*.whl to a public wheelhouse
