--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ commands = py.test -vvv {posargs:tests}
 [testenv:linting]
 deps =
     flake8
+    pep8-naming
     # pygments required by rst-lint
     pygments
     restructuredtext_lint
