Add Python 3.7 to Travis and AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,10 @@ environment:
     - PYTHON: "C:\\Python36"
       TOX_ENV: "py36"
 
-    - PYTHON: "C:\\Python36"
+    - PYTHON: "C:\\Python37"
+      TOX_ENV: "py37"
+
+    - PYTHON: "C:\\Python37"
       TOX_ENV: "coverage"
 
 init:
