--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,13 @@
 # For more information about tox, see https://tox.readthedocs.org/en/latest/
 [tox]
-envlist = py27,py34,py35,py36,py37,nightly,pypy
+envlist = py27,py34,py35,py36,py37,nightly,pypy35
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 commands = py.test -vvv {posargs:tests}
+
+[testenv:pypy35]
+basepython = pypy3
 
 [testenv:linting]
 deps =
