Add black as formatter

--- a/tox.ini
+++ b/tox.ini
@@ -13,11 +13,13 @@ basepython = pypy3
 deps =
     flake8
     pep8-naming
+    black
     # pygments required by rst-lint
     pygments
     restructuredtext_lint
 commands =
     flake8 exec_wrappers tests
+    black --check exec_wrappers tests
     rst-lint CONTRIBUTING.rst CHANGELOG.rst README.rst
 
 # Run on a separate env and job so we can run the tests in develop mode, which
