Replace py.test with pytest

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27,py34,py35,py36,py37,nightly,pypy35
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
-commands = py.test -vvv {posargs:tests}
+commands = pytest -vvv {posargs:tests}
 
 [testenv:pypy35]
 basepython = pypy3
@@ -29,4 +29,4 @@ usedevelop=True
 deps =
     -r{toxinidir}/requirements.txt
 commands =
-    py.test -vvv --cov exec_wrappers --cov-config .coveragerc --cov-report xml {posargs:tests}
+    pytest -vvv --cov exec_wrappers --cov-config .coveragerc --cov-report xml {posargs:tests}
